--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
 
-            <div id="social-container">
+            <div id="socials-container">
 
                 <img src="./assets/linkedin.png" alt="Sachin Alam LinkedIn Profile" class="icon"
                     onclick="location.href='https://linkedin.com/in/sachinalam'">
