--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="profile">
 
         <div class="section__pic_container">
-            <img src="./assets/profile-pic.png" alt="Sachin Profile Picture">
+            <img src="./assets/sachin_profile_pic.jpeg" alt="Sachin Profile Picture" class="pp">
         </div>
 
         <div class="section__text">
@@ -81,6 +81,7 @@
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
 
+            <!-- Social ICONS - LinkedIn, GitHub -->
             <div id="socials-container">
 
                 <img src="./assets/linkedin.png" alt="Sachin Alam LinkedIn Profile" class="icon"
@@ -89,11 +90,59 @@
                 <img src="./assets/github.png" alt="Sachin Alam GitHub Profile" class="icon"
                     onclick="location.href='https://github.com/sachin9998'">
 
+                <img src="./assets/leetcode.svg" alt="Sachin Alam Leetcode Profile" class="icon"
+                    onclick="location.href='https://leetcode.com/sachinalam'">
+
             </div>
 
         </div>
 
 
+
+    </section>
+
+    <section id="about">
+
+        <p class="section__text__p1">Get to Know More</p>
+
+        <h1 class="title">About Me</h1>
+
+        <div class="section-container">
+
+            <div class="section__pic_container">
+                <img src="./assets/about-pic.png" alt="Profile Picture" class="about-pic">
+            </div>
+
+            <!-- Details Container -->
+            <div class="about-details-container">
+                <div class="about-containers">
+
+                    <!-- Experiance 1 -->
+                    <div class="details-container">
+                        <img src="./assets/experience.png" alt="Experiance icon" class="icon">
+                        <h3>Experiance</h3>
+                        <p>1+ Years <br>Frontend Development </p>
+                    </div>
+
+                    <!-- Experiance 2 -->
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="Education icon" class="icon">
+                        <h3>Education</h3>
+                        <p>B.E Computer <br>Full Stack Developer </p>
+                    </div>
+
+                </div>
+
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates libero commodi quo doloremque veritatis quam provident similique odio minima ea. Deserunt eius excepturi ullam, quisquam sequi, doloribus corrupti fuga ab provident corporis quibusdam repudiandae deleniti ipsum voluptatum similique ad? Eligendi labore numquam placeat odit eos, voluptatibus velit porro voluptates sunt.</p>
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./experience'">
 
     </section>
 
